--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -66,3 +66,21 @@ body {
   font-weight: bold;
   margin-right: 5px;
 }
+
+
+
+
+/* form {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 50px;
+
+    display: flex;
+    justify-content: center;
+
+    padding: 10px 0;
+
+    background-color: rgba(141, 12, 57);
+} */
