--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -29,7 +29,7 @@ form {
     display: flex;
     justify-content: center;
     padding: 10px 0;
-    background-color: rgba(0, 0, 255);
+    background-color: rgb(0, 0, 255);
 }
 
 form input {
@@ -43,7 +43,7 @@ button {
     cursor: pointer;
     height: 30px;
     width: 85px;
-    background-color: #d0d0d0;
+    background-color: #8d8d8d;
     outline: none;
     border: none;
     padding: 0;
@@ -52,7 +52,8 @@ button {
 }
 
 button:hover {
-    background-color: #8b8b8b;
+    background-color: #d0d0d0;
+    color: rgb(0, 0, 255);
 }
 
 img {
@@ -89,8 +90,15 @@ img {
 }
 
 .load-more {
-    display: inline-flex;
+    display: inline;
     margin: 30px 0;
+    cursor: pointer;
+    height: 30px;
+    width: 100px;
+    background-color: #8d8d8d;
+    outline: none;
+    border: rgb(0, 0, 255) solid 1px;
+    border-radius: 2px;
 }
 
 .is-hidden {
